<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">添加一个信息</string>
    <string name="button_send">发送</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="button_fragment">去FragmentActivity</string>
    <string name="share">分享APP</string>
    <string name="call">拨打186</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
